main page adaptive 90%, promotion-page, services-page, fixes

--- a/app/_scss/pages/doctors/doctors-general.scss
+++ b/app/_scss/pages/doctors/doctors-general.scss
@@ -166,7 +166,7 @@
 	padding: 70px 0;
 	background: image-url("bg-general.png") no-repeat;
 	background-size: cover;
-	background-position: center -690px;
+	background-position: center;
 	position: relative;
 
 	&:before {
