--- a/app/css/main.css
+++ b/app/css/main.css
@@ -894,6 +894,23 @@ input.material-field:focus, textarea.material-field:focus {
   margin-left: -15px;
   margin-right: -15px;
 }
+.cabinet-block__link:before {
+  display: block;
+  width: 60px;
+  height: 60px;
+  background: url('../images/zoom.svg?1486128561') no-repeat 50% 50%;
+  background-size: cover;
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.cabinet-block__link:hover:before {
+  opacity: 1;
+}
 
 .cabinet-block__img-container {
   height: 100%;
@@ -1306,6 +1323,30 @@ input.material-field:focus, textarea.material-field:focus {
   height: 100%;
   width: 100%;
 }
+.footer__socials-link.fb {
+  background: url('../images/foot-facebook.svg?1486630787') no-repeat 50% 50%;
+  background-size: 20px;
+}
+.footer__socials-link.vk {
+  background: url('../images/foot-vk.svg?1486630806') no-repeat 50% 50%;
+  background-size: 20px;
+}
+.footer__socials-link.ok {
+  background: url('../images/foot-odnoklassniki.svg?1486630798') no-repeat 50% 50%;
+  background-size: 20px;
+}
+.footer__socials-link.inst {
+  background: url('../images/foot-instagram.svg?1486630794') no-repeat 50% 50%;
+  background-size: 20px;
+}
+.footer__socials-link.google {
+  background: url('../images/foot-google-plus.svg?1486630790') no-repeat 50% 50%;
+  background-size: 20px;
+}
+.footer__socials-link.tw {
+  background: url('../images/foot-twitter.svg?1486630802') no-repeat 50% 50%;
+  background-size: 20px;
+}
 
 .footer-top__adress {
   padding: 15px 0;
@@ -1491,9 +1532,67 @@ input.material-field:focus, textarea.material-field:focus {
   max-width: 90%;
 }
 
+.gallery-pop__container {
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.owl-gallery-slider .owl-prev, .owl-gallery-slider .owl-next {
+  position: absolute;
+  font-size: 0;
+  color: transparent;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #fff;
+  top: 50%;
+  border-top: none;
+  border-right: none;
+  transition: all .3s ease-in-out;
+  opacity: 1;
+}
+.owl-gallery-slider .owl-prev:hover, .owl-gallery-slider .owl-next:hover {
+  opacity: 0.6;
+}
+
+.owl-gallery-slider .owl-prev {
+  transform: translateY(-50%) rotate(45deg);
+  left: -75px;
+}
+
+.owl-gallery-slider .owl-next {
+  transform: translateY(-50%) rotate(-135deg);
+  right: -75px;
+}
+
+.gallery-pop-up__close-button {
+  position: absolute;
+  top: -65px;
+  right: 45px;
+  background: url('../images/gallery-close.svg?1486624426') no-repeat;
+  width: 40px;
+  background-size: cover;
+  height: 40px;
+  transition: all .3s ease-in-out;
+  opacity: 1;
+}
+.gallery-pop-up__close-button:hover {
+  opacity: 0.6;
+}
+
+.owl-gallery-sliders-count {
+  color: #fff;
+  text-align: center;
+  padding-top: 50px;
+  font-size: 23px;
+}
+
 /****************************/
 /* xs+sm+md */
 @media screen and (max-width: 1199px) {
+  .gallery-pop-up__close-button {
+    right: 25px;
+  }
+
   .cabinet-block__item {
     height: 350px;
   }
@@ -1512,6 +1611,10 @@ input.material-field:focus, textarea.material-field:focus {
 }
 /* xs+sm */
 @media screen and (max-width: 991px) {
+  .gallery-pop-up__close-button {
+    right: 0;
+  }
+
   .general-block {
     padding-top: 45px;
   }
@@ -1706,6 +1809,23 @@ input.material-field:focus, textarea.material-field:focus {
 }
 /* sm */
 @media screen and (max-width: 767px) {
+  .gallery-pop__container {
+    max-width: 100%;
+  }
+
+  .owl-gallery-slider .owl-prev, .owl-gallery-slider .owl-next {
+    width: 20px;
+    height: 20px;
+  }
+
+  .owl-gallery-slider .owl-prev {
+    left: 0;
+  }
+
+  .owl-gallery-slider .owl-next {
+    right: 0;
+  }
+
   body {
     table-layout: fixed;
   }
@@ -1981,7 +2101,7 @@ input.material-field:focus, textarea.material-field:focus {
   }
 
   .footer__socials-item {
-    margin-right: 19px;
+    margin-right: 17px;
   }
 
   .footer__nav-item {
