--- a/app/_scss/pages/main/zmedia.scss
+++ b/app/_scss/pages/main/zmedia.scss
@@ -231,6 +231,10 @@
 
 /* sm */
 @media screen and (max-width: 767px) {
+	.gallery-pop-up__dialog {
+		width: 100%;
+	}
+
 	.gallery-pop__container {
 		max-width: 100%;
 	}
@@ -557,4 +561,3 @@
 		padding: 55px 30px 40px 30px;
 	}
 }
-
