fixex, pages - article (only structure), contacts, prices

--- a/app/_scss/pages/main/form.scss
+++ b/app/_scss/pages/main/form.scss
@@ -43,8 +43,8 @@ textarea.material-field {
 }
 
 .form-group-material:after {
-	height: 1px;
-	background: #9b9b9b;
+	height: 2px;
+	background: #D4D4D4;
 	width: 100%;
 }
 
